kubelet/networking/ing_empty.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - ingress-57834.switzerlandnorth.cloudapp.azure.com
    secretName: tls-sample
  rules:
  - host: ingress-57834.switzerlandnorth.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
