kubelet/networking/ing_example.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin-ingress
spec:
  tls:
  - hosts:
    - ingress-57834.westus2.cloudapp.azure.com
    secretName: k8dash
  rules:
  - host: ingress-57834.westus2.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: k8dash
          servicePort: 80
